--- a/Practice project/(EJS)-BlogWebsite_nodatabase/ejs-challenge/views/home.ejs
+++ b/Practice project/(EJS)-BlogWebsite_nodatabase/ejs-challenge/views/home.ejs
@@ -9,7 +9,9 @@
 
 <% postLists.forEach(element => { %>
     <h1><%= element.title %> </h1>
-    <p><%= element.content.substring(0,100) + "..." %> <a href="/posts/<%= element.title %>">Readmore</a> </p>
+    <p><%= element.content.substring(0,100) + "..." %> 
+        <a href="/posts/<%= element.title %>">Readmore</a> 
+    </p>
 <% }); %>
 
 
